--- a/Project/src/main/resources/directions_popup.fxml
+++ b/Project/src/main/resources/directions_popup.fxml
@@ -2,24 +2,27 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="400.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UIControllerPUD">
   <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="400" maxWidth="600" prefHeight="400" prefWidth="640" VBox.vgrow="ALWAYS">
       <children>
-        <Label alignment="CENTER" layoutX="155.0" layoutY="177.0" style="&#10;" text="Drag components from Library here…" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
-          <font>
-            <Font size="18.0" />
-          </font>
-        </Label>
-            <TextArea fx:id="directions" layoutX="14.0" layoutY="25.0" prefHeight="352.0" prefWidth="255.0" />
-            <Button fx:id="printDirections" layoutX="322.0" layoutY="25.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="263.0" text="Print Me The Directions" />
-            <Button fx:id="textDirections" layoutX="322.0" layoutY="149.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="263.0" text="Text Me The Directions" />
-            <Button fx:id="emailDirections" layoutX="322.0" layoutY="273.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="263.0" text="Email Me The Directions" />
+            <Button fx:id="printDirections" layoutX="322.0" layoutY="25.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="263.0" text="Print Me The Directions">
+               <font>
+                  <Font size="20.0" />
+               </font></Button>
+            <Button fx:id="textDirections" layoutX="322.0" layoutY="149.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="263.0" text="Text Me The Directions">
+               <font>
+                  <Font size="20.0" />
+               </font></Button>
+            <Button fx:id="emailDirections" layoutX="322.0" layoutY="273.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="263.0" text="Email Me The Directions">
+               <font>
+                  <Font size="20.0" />
+               </font></Button>
+            <Label fx:id="directions" layoutX="28.0" layoutY="25.0" prefHeight="350.0" prefWidth="263.0" />
       </children>
     </AnchorPane>
   </children>
