--- a/Project/src/main/resources/reservations_main.fxml
+++ b/Project/src/main/resources/reservations_main.fxml
@@ -68,7 +68,7 @@
                         <Font name="System Bold Italic" size="16.0" />
                     </font>
                 </Text>
-                <DatePicker fx:id="datePicker" blendMode="LIGHTEN" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="65.0">
+                <DatePicker fx:id="datePicker" blendMode="LIGHTEN" onAction="#updateColorView" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="65.0">
                     <effect>
                         <ColorAdjust brightness="0.05" />
                     </effect>
@@ -78,7 +78,7 @@
                         <Font name="System Bold Italic" size="16.0" />
                     </font>
                 </Text>
-                <JFXTimePicker fx:id="startTimePicker" defaultColor="#5777c6" style="-fx-background-color: white;" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="130.0" />
+                <JFXTimePicker fx:id="startTimePicker" defaultColor="#5777c6" onAction="#updateColorView" style="-fx-background-color: white;" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="130.0" />
                 <Text fill="WHITE" layoutX="48.0" layoutY="66.0" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" text="End Time" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="170.0">
                     <font>
                         <Font name="System Bold Italic" size="16.0" />
@@ -94,20 +94,20 @@
                         <Font name="System Bold Italic" size="16.0" />
                     </font>
                 </Text>
-                <JFXTimePicker fx:id="endTimePicker" defaultColor="#5777c6" layoutX="10.0" layoutY="10.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="195.0" />
+                <JFXTimePicker fx:id="endTimePicker" defaultColor="#5777c6" layoutX="10.0" layoutY="10.0" onAction="#updateColorView" style="-fx-background-color: white;" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="195.0" />
 
             <Rectangle fx:id="classroom8" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="66.0" layoutX="535.0" layoutY="89.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="62.0" />
             <Rectangle fx:id="classroom6" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="66.0" layoutX="595.0" layoutY="89.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="62.0" />
-            <Rectangle fx:id="classroom7" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" layoutX="580.0" layoutY="187.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="42.0" />
-            <Rectangle fx:id="classroom5" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" layoutX="623.0" layoutY="187.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="55.0" />
-            <Rectangle fx:id="classroom9" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="33.0" layoutX="544.0" layoutY="187.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="35.0" />
-            <Rectangle fx:id="classroom1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="43.0" layoutX="623.0" layoutY="342.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-            <Rectangle fx:id="MHCR" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="33.0" layoutX="623.0" layoutY="385.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-            <Rectangle fx:id="classroom2" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="33.0" layoutX="724.0" layoutY="266.0" opacity="0.15" rotate="70.0" stroke="BLACK" strokeType="INSIDE" width="69.0" />
-            <Rectangle fx:id="classroom3" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="33.0" layoutX="697.0" layoutY="200.0" opacity="0.15" rotate="70.0" stroke="BLACK" strokeType="INSIDE" width="69.0" />
-            <Rectangle fx:id="pantry" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="84.0" layoutX="633.0" layoutY="425.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="84.0" />
+            <Rectangle fx:id="classroom7" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" layoutX="590.0" layoutY="180.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="42.0" />
+            <Rectangle fx:id="classroom5" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" layoutX="635.0" layoutY="180.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="55.0" />
+            <Rectangle fx:id="classroom9" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="33.0" layoutX="548.0" layoutY="175.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="35.0" />
+            <Rectangle fx:id="classroom1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="43.0" layoutX="635.0" layoutY="345.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+            <Rectangle fx:id="MHCR" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="33.0" layoutX="633.0" layoutY="393.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+            <Rectangle fx:id="classroom2" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="33.0" layoutX="744.0" layoutY="266.0" opacity="0.15" rotate="70.0" stroke="BLACK" strokeType="INSIDE" width="69.0" />
+            <Rectangle fx:id="classroom3" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="33.0" layoutX="720.0" layoutY="190.0" opacity="0.15" rotate="70.0" stroke="BLACK" strokeType="INSIDE" width="69.0" />
+            <Rectangle fx:id="pantry" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="86.0" layoutX="640.0" layoutY="440.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="95.0" />
             <Rectangle fx:id="classroom4" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="66.0" layoutX="657.0" layoutY="89.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="35.0" />
-            <Polygon fx:id="MHA" fill="DODGERBLUE" layoutX="767.0" layoutY="374.0" opacity="0.15" points="-50.0, 40.0, 39.0, 20.0, 18.8045654296875, -60.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
+            <Polygon fx:id="MHA" fill="DODGERBLUE" layoutX="785.0" layoutY="374.0" opacity="0.15" points="-50.0, 40.0, 39.0, 20.0, 18.8045654296875, -60.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
             </children>
         </AnchorPane>
     </children>
