--- a/Project/src/main/resources/service_request_interpreter.fxml
+++ b/Project/src/main/resources/service_request_interpreter.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -63,12 +64,12 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <Text fill="WHITE" layoutX="31.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Servie Name ">
+                        <Text fill="WHITE" layoutX="31.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Interpreter">
                            <font>
                               <Font name="System Bold Italic" size="24.0" />
                            </font>
                         </Text>
-                        <Text fill="WHITE" layoutX="31.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Name">
+                        <Text fill="WHITE" layoutX="31.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Henry Poskanzer">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
@@ -76,6 +77,8 @@
                         <ChoiceBox fx:id="roomSelect" layoutX="48.0" layoutY="109.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
                         <ChoiceBox fx:id="languageSelect" layoutX="48.0" layoutY="165.0" prefWidth="150.0" />
                         <JFXTextField fx:id="serviceMessage" layoutX="48.0" layoutY="220.0" prefHeight="220.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
+                        <Label layoutX="67.0" layoutY="92.0" text="Select your location." textFill="WHITE" />
+                        <Label layoutX="73.0" layoutY="148.0" text="Select a language." textFill="WHITE" />
                      </children>
                   </AnchorPane>
                </left>
